[tool.poetry]
name = "nyan-ext-visualize"
version = "0.1.0"
description = ""
authors = ["MincoMK <mail@drchi.co.kr>"]
readme = "README.md"
packages = [{include = "nyan_ext_visualize"}]

[tool.poetry.dependencies]
python = "^3.10"
nyanlang = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
